--- a/index.html
+++ b/index.html
@@ -14,6 +14,26 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
+
+    <nav>
+      <a href="./index.html" class="logo">iPhone 13 Pro</a>
+      <div class="nav-links">
+        <a href="#">Overview</a>
+        <a href="#">Switching to iPhone</a>
+        <a href="#">Tech Specs</a>
+        <button class="buy-button">Buy</button>
+      </div>
+    </nav>
+
+    <section class="first-page">
+      <div class="first-page-text">
+        <h1 class="first-page-title">iPhone 13 Pro</h1>
+        <h2 class="first-page-subtitle">Oh. So. Pro.</h2>
+      </div>
+      <!-- Front Page Video -->
+      <video class="intro-video" autoplay muted src="./images/intro-animation.mov"></video>
+    </section>
+
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"
       integrity="sha512-eP6ippJojIKXKO8EPLtsUMS+/sAGHGo1UN/38swqZa1ypfcD4I0V/ac5G3VzaHfDaklFmQLEs51lhkkVaqg60Q=="
