--- a/index.html
+++ b/index.html
@@ -51,6 +51,26 @@
       </div>
     </section>
 
+    <!-- Thrid Page -->
+
+    <section class="third-page">
+      <div class="product-text-container">
+        <div class="product-text-left">
+          <p class="phone-title">iPhone 13 Pro Max</p>
+          <p class="phone-size pro-size">6.7"</p>
+        </div>
+        <div class="product-text-right">
+          <p class="phone-title">iPhone 13 Max</p>
+          <p class="phone-size max-size">6.1"</p>
+        </div>
+      </div>
+      <div class="product-images">
+        <img class="large-phone" src="./images/large-phone.png" alt="large-phone">
+        <img class="small-phone" src="./images/small-phone.png" alt="small-phone">
+      </div>
+      <p class="retina-line">Super Retina XDR display with ProMotion</p>
+    </section>
+
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"
       integrity="sha512-eP6ippJojIKXKO8EPLtsUMS+/sAGHGo1UN/38swqZa1ypfcD4I0V/ac5G3VzaHfDaklFmQLEs51lhkkVaqg60Q=="
