--- a/index.html
+++ b/index.html
@@ -71,6 +71,43 @@
       <p class="retina-line">Super Retina XDR display with ProMotion</p>
     </section>
 
+    <!-- Fouth Page / Slide -->
+
+    <section class="forth-page">
+      <div class="purchase-left">
+        <div class="phone-gallery">
+          <div class="phone-gallery-container blue-cont">
+            <img class="blue-back" src="./images/blue-iphone-back.png" alt="blue-black">
+          </div>
+          <div class="phone-gallery-container blue-cont">
+            <img class="silver-back" src="./images/silver-iphone-back.png" alt="silver-black">
+          </div>
+          <div class="phone-gallery-container blue-cont">
+            <img class="gold-back" src="./images/gold-iphone-back.png" alt="gold-black">
+          </div>
+          <div class="phone-gallery-container blue-cont">
+            <img class="graphite-back" src="./images/graphite-iphone-back.png" alt="graphite-black">
+          </div>
+        </div>
+        <div class="swatch-container">
+          <div class="swatches">
+            <img src="./images/swatch-blue.svg" swatch="blue" alt="swatch-blue">
+            <img src="./images/swatch-silver.svg" swatch="silver" alt="swatch-silver">
+            <img src="./images/swatch-gold.svg" swatch="gold" alt="swatch-gold">
+            <img src="./images/swatch-graphite.svg" swatch="graphite" alt="swatch-graphite">
+          </div>
+          <p><span>Sierra Blue</span>, <span>Silver</span>, <span>Gold</span>, <span>Graphite</span></p>
+        </div>
+      </div>
+      <div class="purchase-right">
+        <img src="./images/blue-closeup.png" class="blue phone" alt="blue-phone">
+        <img src="./images/silver-closeup.png" class="silver phone" alt="silver-phone">
+        <img src="./images/gold-closeup.png" class="gold phone" alt="gold-phone">
+        <img src="./images/graphite-closeup.png" class="graphite phone" alt="graphite-phone">
+      </div>
+    </section>
+
+
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"
       integrity="sha512-eP6ippJojIKXKO8EPLtsUMS+/sAGHGo1UN/38swqZa1ypfcD4I0V/ac5G3VzaHfDaklFmQLEs51lhkkVaqg60Q=="
