--- a/index.html
+++ b/index.html
@@ -107,6 +107,22 @@
       </div>
     </section>
 
+    <!-- Fifth Page / Product -->
+
+    <section class="fifth-page">
+      <video class="product-video" src="./images/output-2.mp4" muted ></video>
+      <div class="product-info-container">
+        <div class="left-info">
+          <h3>Up to <br/><span> 25% brighter outdoors</span><br/>for content that looks even more vivid in sunlight</h3>
+          <h3><span>Even more display area</span><br/>thanks to smaller camera system</h3>
+        </div>
+        <div class="right-info">
+          <h3><span>Custom OLED technology</span><br/>pushes the display's incredible resolution and color right to the edge</h3>
+          <h3>up to<span> 1200 nits</span> peak brightness for your HDR photos and videos</h3>
+        </div>
+      </div>
+    </section>
+
 
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"
