--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
     />
     <link rel="stylesheet" href="./style.css" />
   </head>
+  
   <body>
 
+    <!-- NAV //////////////////////////////////////////////////////////////////////////////// -->
     <nav>
       <a href="./index.html" class="logo">iPhone 13 Pro</a>
       <div class="nav-links">
@@ -25,7 +27,7 @@
       </div>
     </nav>
 
-    <!-- First Page -->
+    <!-- First Page ////////////////////////////////////////////////////////////////////-->
     <section class="first-page">
       <div class="first-page-text">
         <h1 class="first-page-title">iPhone 13 Pro</h1>
@@ -34,7 +36,7 @@
       <video class="intro-video" autoplay muted src="./images/intro-animation.mov"></video>
     </section>
 
-    <!-- Second Page -->
+    <!-- Second Page ///////////////////////////////////////////////////////////////////-->
     <section class="second-page">
       <video class="smoke-video" autoplay muted loop src="./images/smoke-video.mp4"></video>
       <div class="second-text">
@@ -51,7 +53,7 @@
       </div>
     </section>
 
-    <!-- Thrid Page -->
+    <!-- Thrid Page //////////////////////////////////////////////////////////////////////-->
 
     <section class="third-page">
       <div class="product-text-container">
@@ -71,7 +73,7 @@
       <p class="retina-line">Super Retina XDR display with ProMotion</p>
     </section>
 
-    <!-- Fouth Page / Slide -->
+    <!-- Fouth Page / Slide //////////////////////////////////////////////////////////////-->
 
     <section class="forth-page">
       <div class="purchase-left">
@@ -107,7 +109,7 @@
       </div>
     </section>
 
-    <!-- Fifth Page / Product -->
+    <!-- Fifth Page / Product ///////////////////////////////////////////////////////////////-->
 
     <section class="fifth-page">
       <video class="product-video" src="./images/output-2.mp4" muted ></video>
@@ -123,7 +125,7 @@
       </div>
     </section>
 
-    <!-- Sixth Page -->
+    <!-- Sixth Page /////////////////////////////////////////////////////////////////////////-->
 
     <section class="sixth-page">
       <div class="photo-description">
@@ -139,6 +141,8 @@
       </div>
     </section>
 
+    <!-- Script CDN & JS file ///////////////////////////////////////////////////////////-->
+    <!-- /////////////////////////////////////////////////////////////////////////////// -->
 
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"
